syntax = "proto3";

package calculator;

option go_package = "github.com/lamtruong9x/grpc_project/calculator/proto";

message PrimeRequest {
    int32 num = 1;
}

message PrimeResponse {
    int32 prime = 1;
}